# news-scraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  main.py  pyproject.toml
src/: settings.py
src/cli/: __init__.py  _async.py
src/scraping/: __init__.py  errors.py  extractor.py  models.py  utils.py
src/storage/: __init__.py  client.py  globals.py  models.py
src/summarization/: __init__.py  summarize.py
